Fix some alignment and styling issues

--- a/app/src/app/analysis/data-table/data-table-cell-styles.css
+++ b/app/src/app/analysis/data-table/data-table-cell-styles.css
@@ -30,11 +30,13 @@
 .unapprovedCell{
     border: 1px solid transparent;
     background-color: #90cdf4;
+    border-left: 1px dashed rgba(0,0,0,0.1);
 }
 
 .rejectedCell{
     border: 1px solid transparent;
     background-color: #FEB2B2;
+    border-left: 1px dashed rgba(0,0,0,0.1);
 }
 
 @keyframes ants{
